--- a/xbmc/cores/dvdplayer/Codecs/libdvd/Makefile.in
+++ b/xbmc/cores/dvdplayer/Codecs/libdvd/Makefile.in
@@ -8,7 +8,7 @@ DIRS=	libdvdread \
 WRAPPER=../../../DllLoader/exports/wrapper.o
 WRAPPER_OSX=../../../../../tools/Mach5/wrapper.rb
 
-LDFLAGS=-shared -fPIC -rdynamic
+LDFLAGS += -shared -fPIC -rdynamic
 ifeq ($(ARCH), powerpc-osx)
 	# Add -lbundle1.o for powerpc-osx
 	BUNDLE1_O = -lbundle1.o
