--- a/xbmc/cores/paplayer/SIDCodec/Makefile.in
+++ b/xbmc/cores/paplayer/SIDCodec/Makefile.in
@@ -17,7 +17,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 	../../../../tools/Mach5/wrapper.rb $@;mv output.so $@
 	chmod +x $@
 else
-	$(CC) $(CFLAGS) $(LDFLAGS) -shared -o $@ $(OBJS) ../../../linux/XHandle.o `cat ../../DllLoader/exports/wrapper.def` ../../DllLoader/exports/wrapper.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -shared -o $@ $(OBJS) ../../../linux/XHandle.o `cat ../../DllLoader/exports/wrapper.def` ../../DllLoader/exports/wrapper.o
 endif
 
 include ../../../../Makefile.include
