--- a/configure.in
+++ b/configure.in
@@ -376,25 +376,25 @@ if test "$host_vendor" = "apple" ; then
   INCLUDES="$INCLUDES -I\$(abs_top_srcdir)/xbmc/osx"
   LDFLAGS="$LDFLAGS -mmacosx-version-min=10.4"
   LDFLAGS="$LDFLAGS -isysroot /Developer/SDKs/MacOSX10.4u.sdk"
-  LDFLAGS="$LDFLAGS -framework IOKit"
-  LDFLAGS="$LDFLAGS -framework Cocoa"
-  LDFLAGS="$LDFLAGS -framework OpenGL"
-  LDFLAGS="$LDFLAGS -framework AppKit"
-  LDFLAGS="$LDFLAGS -framework Carbon"
-  LDFLAGS="$LDFLAGS -framework CoreAudio"
-  LDFLAGS="$LDFLAGS -framework QuickTime"
-  LDFLAGS="$LDFLAGS -framework AudioUnit"
-  LDFLAGS="$LDFLAGS -framework Foundation"
-  LDFLAGS="$LDFLAGS -framework CoreServices"
-  LDFLAGS="$LDFLAGS -framework CoreVideo"
-  LDFLAGS="$LDFLAGS -framework CoreAudio"
-  LDFLAGS="$LDFLAGS -framework AudioToolbox"
-  LDFLAGS="$LDFLAGS -framework CoreFoundation"
-  LDFLAGS="$LDFLAGS -framework DiskArbitration"
-  LDFLAGS="$LDFLAGS -framework ApplicationServices"
   LDFLAGS="$LDFLAGS -L/opt/local/lib"
   LDFLAGS="$LDFLAGS -L/opt/local/lib/mysql5/mysql"
   LDFLAGS="$LDFLAGS -L/opt/local/lib/samba3"
+  LIBS="$LIBS -framework IOKit"
+  LIBS="$LIBS -framework Cocoa"
+  LIBS="$LIBS -framework OpenGL"
+  LIBS="$LIBS -framework AppKit"
+  LIBS="$LIBS -framework Carbon"
+  LIBS="$LIBS -framework CoreAudio"
+  LIBS="$LIBS -framework QuickTime"
+  LIBS="$LIBS -framework AudioUnit"
+  LIBS="$LIBS -framework Foundation"
+  LIBS="$LIBS -framework CoreServices"
+  LIBS="$LIBS -framework CoreVideo"
+  LIBS="$LIBS -framework CoreAudio"
+  LIBS="$LIBS -framework AudioToolbox"
+  LIBS="$LIBS -framework CoreFoundation"
+  LIBS="$LIBS -framework DiskArbitration"
+  LIBS="$LIBS -framework ApplicationServices"
 elif expr "X$host_cpu" : 'Xarm.*' > /dev/null; then
   use_arch=arm
   CFLAGS="$CFLAGS -mfloat-abi=softfp -mno-apcs-stack-check"
