--- a/Makefile.include.in
+++ b/Makefile.include.in
@@ -29,7 +29,7 @@ CXX=@CXX@
 CC=@CC@
 CXXFLAGS+=@CXXFLAGS@
 CFLAGS+=@CFLAGS@
-INCLUDES+=@INCLUDES@
+INCLUDES+=$(sort @INCLUDES@)
 DEFINES+= \
 	-D_LINUX \
 	-D_FILE_DEFINED \
