--- a/configure.in
+++ b/configure.in
@@ -47,6 +47,7 @@ openmax_not_found="== Could not find libnvomx. OpenMax support disabled. =="
 libass_using_internal="== External Libass not found, using internal. =="
 ssh_not_found="== Could not find libssh. SSH FTP VFS support disabled. =="
 libvpx_not_found="== Could not find libvpx. WebM support disabled. =="
+librtmp_not_found="== Could not find libRTMP. libRTMP support disabled. =="
 
 # External library message strings
 external_libraries_enabled="== Use of all supported external libraries enabled. =="
@@ -719,6 +720,10 @@ fi
 AC_CHECK_LIB([vpx], [main],use_vpx=yes,
 use_vpx=no;AC_MSG_RESULT($vpx_not_found))
 
+# libRTMP
+AC_CHECK_HEADERS([librtmp/log.h librtmp/amf.h librtmp/rtmp.h],use_librtmp=yes,
+use_librtmp=no;AC_MSG_RESULT($librtmp_not_found))
+
 ### External libraries checks
 # External FFmpeg
 if test "$use_external_ffmpeg" = "yes"; then
@@ -777,6 +782,10 @@ if test "$use_vpx" = "yes"; then
   USE_VPX=1
 else
   USE_VPX=0
+fi
+
+if test "$use_librtmp" = "yes"; then
+  AC_DEFINE([HAS_LIBRTMP], [1], [Whether to use libRTMP library.])
 fi
 
 # External liba52 if deprecated a52 support is enabled
@@ -1235,6 +1244,12 @@ if test "$use_vpx" = "yes"; then
   final_message="$final_message\n  WebM support:\tYes"
 else
   final_message="$final_message\n  WebM support:\tNo"
+fi
+
+if test "$use_librtmp" = "yes"; then
+  final_message="$final_message\n  libRTMP support:\tYes"
+else
+  final_message="$final_message\n  libRTMP support:\tNo"
 fi
 
 if test "$use_libdts" = "yes"; then
